# vsyncer

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  go.mod  go.sum
.github/: ci.dockerfile
.github/docker/: Dockerfile
.github/workflows/: build_vsyncer.yml  ci.dockerfile  go.yml  integration_test.yml  release_vsyncer.yml
checker/: checker.go  checker_dartagnan.go  checker_genmc.go  checker_mock.go  memory_model.go
cmake/: vsyncer.cmake
cmd/vsyncer/: check.go  check_test.go  compile.go  compile_test.go  csvreport.go  docker.go  errors.go  info.go  info_test.go  mutate.go  mutate_test.go  optimize.go  root.go  root_test.go  utils.go  version.go
core/: assignment.go  atomicop.go  bitseq.go  bitseq_test.go  ordering.go  selection.go
docker/: base.dockerfile  ci.dockerfile  dat3m.dockerfile  genmc.dockerfile  vsyncer.dockerfile
examples/: ttaslock.c
include/: await_while.h
integration/: CMakeLists.txt  ok.c
logger/: logger.go
module/: analyzer.go  barrier_count.go  config.go  diff.go  doc.go  expander.go  history.go  mapping.go  mutator.go  ordering.go  report.go  selection.go  visitor.go  wrap_inst.go  wrap_module.go
optimizer/: delta.go  delta_test.go  driver.go  driver_ddmin.go  driver_lr.go  driver_lr_test.go  filter.go  filter_test.go  stats.go
tests/: CMakeLists.txt  await_while.h  cmpxchg.c  error.c  function_pointer.c  genmc9_bug.c  hang.c  sigsev.c  t1.c  zero_exec.c
tools/: compiler.go  docker.go  docker_darwin.go  docker_linux.go  docker_netbsd.go  docker_windows.go  environment.go  tools.go  utils.go
